# maze-project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/uml_design/: uml.drawio
extra/uml_design/: uml.drawio
src/maze_solver/core/: models.py
tests/: test_basic.py
