[project]
name = "maze-project"
version = "0.1.0"
description = "Advanced maze generator and solver with BFS and visualization."
authors = [
    {name = "Dmitry Kvashnin", email = "dmitrij.kvashnin05@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "networkx>=3.1",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
package-mode = false
